fixed typos; improved ci pipeline; added requirements; added django translations

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = django-wpm
 version = 0.1
-description = A Django app to manage wireguard peers on wireguard capeable routers.
+description = A Django app to manage wireguard peers on wireguard capable routers.
 long_description = file: README.md
 url = https://github.com/secshellnet/wpm-django
 author = Nico Felbinger
@@ -27,3 +27,5 @@ packages = find:
 python_requires = >=3.8
 install_requires =
     Django >= 4.2
+    apscheduler >= 3.10
+    requests >= 2.31.0
