--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,6 +25,11 @@ jobs:
         with:
           python-version: ${{ env.PYTHON_VERSION }}
 
+      - name: Get pip cache dir
+        id: pip-cache
+        run: |
+          echo "dir=$(pip cache dir)" >> $GITHUB_OUTPUT
+
       - name: pip cache
         uses: actions/cache@v3
         with:
@@ -39,12 +44,19 @@ jobs:
           pip install setuptools wheel
 
       - name: Build Python package
-        run: python setup.py sdist
+        run: python setup.py sdist bdist_wheel
 
       - name: Upload package to artifacts
         uses: actions/upload-artifact@v2
         with:
           name: python-packages
           path: |
+            dist/*.whl
+            dist/*.tar.gz
+
+      - uses: crazy-max/ghaction-github-release@v2
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: |
             dist/*.whl
             dist/*.tar.gz
