adjusted pipeline to control version number for releases

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -43,6 +43,19 @@ jobs:
           python -m pip install --upgrade pip
           pip install setuptools wheel
 
+      - name: "Find version"
+        if: startsWith(github.ref, 'refs/tags/')
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: image
+          tags: type=semver,pattern={{version}}
+
+      - name: "Adjust version number in setup.cfg"
+        if: startsWith(github.ref, 'refs/tags/')
+        run: |
+          sed -i'' "s/0\\.0\\.0-git/${{ steps.meta.outputs.version }}/" setup.cfg
+
       - name: Build Python package
         run: python setup.py sdist bdist_wheel
 
