--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -54,7 +54,7 @@ jobs:
       - name: "Adjust version number in setup.cfg"
         if: startsWith(github.ref, 'refs/tags/')
         run: |
-          sed -i'' "s/0\\.0\\.0-git/${{ steps.meta.outputs.version }}/" setup.cfg
+          sed -i'' "s/0\\.0\\.0/${{ steps.meta.outputs.version }}/" setup.cfg
 
       - name: Build Python package
         run: python setup.py sdist bdist_wheel
