--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = django-wpm
-version = 0.0.0-git
+version = 0.0.0
 description = A Django app to manage wireguard peers on wireguard capable routers.
 long_description = file: README.md
 url = https://github.com/secshellnet/wpm-django
